--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^10.13.1",
     "next": "14.2.12",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
